--- a/pingus-quest.html
+++ b/pingus-quest.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Laura Ukrainec's online portfolio">
     <meta name="author" content="Laura Ukrainec">
-    <title>Laura Ukrainec | Pingu's Quest</title>
+    <title>Laura Ukrainec | Home</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
             <!-- Menu -->
             <nav>
                 <ul class="main-menu">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="top-level">
                         <a href="portfolio.html">Portfolio
@@ -58,7 +58,7 @@
                                 </ul>
                             </li>
                             <li><a href="artwork.html">Artwork</a></li>
-                            <li><a class="current" href="pingus-quest.html">Pingu's Quest</a></li>
+                            <li><a href="pingus-quest.html">Pingu's Quest</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -66,116 +66,70 @@
             </nav>
         </div>
     </header>
-    <main class="pq container">
-        <h2>Pingu's Quest</h2>
-        <div class="quote">
-            <div class="decoration"></div>
-            <div>
-                <q><i>Glacierra is home to a colony of penguins who have been hunted down ever since the surrounding waters became a migration channel for predators. Pingu is a small penguin who's trying to find all 10 Stones of Power so that he can make a wish to relocate
-                the predators and save his colony.</i></q>
-            </div>
-            <div class="decoration"></div>
-        </div>
-        <!-- Overview -->
+    <main class="home container">
+        <!-- Hello -->
         <section>
-            <h3 class="lined">Overview</h3>
-            <div class="chunk">
-                <img class="picture" src="img/pingus-quest/box-art.webp" alt="Pingu's Quest box art">
+            <h2>Hello!</h2>
+            <div>
                 <div>
                     <p>
-                        For the last few years, I've been working on a game of my own that I'm calling Pingu's Quest (for now, anyway). I've done quite a bit of work fleshing out the characters and story, and I have something I'm really proud of. Pingu's Quest will be a single-player
-                        action-adventure RPG with puzzle elements, sort of like the Legend of Zelda series. I want to give it an almost nostalgic feel, so I'm using a pixelated art style and an appearance similar to the old Gameboy Pokémon games.
+                        I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting blueprints.
                     </p>
                     <p>
-                        Rather than being focused on the main character like a lot of modern games, Pingu's Quest will provide no storyline other than a brief introduction. This is so players are encouraged to explore the world around them to figure out what they need to do.
-                    </p>
-                    <p>
-                        To win the game, the player must solve puzzles to find all 10 Stones of Power, then bring them to the Temple and make a wish to send all the predators far away. These multi-step puzzles can be simple, like finding a key to unlock a door or navigating
-                        a slippery maze, but can also be quite difficult, like copying audio sequences or translating instructions. There are also several side quests given by NPCs that can affect the story and environment, such as giving rewards that
-                        give Pingu a boost in combat or clearing a blocked path. Speaking of combat, Pingu will occasionally have to fight off some of the predators that are infesting Glacierra.
+                        I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.
                     </p>
                 </div>
+                <a class="flex btn" href="about.html">Learn More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
             </div>
         </section>
-        <!-- Story -->
+        <div class="divider"></div>
+        <!-- What I Can Do -->
         <section>
-            <h3 class="lined">Story</h3>
-            <div class="chunk">
-                <img class="picture reorder" src="img/pingus-quest/title-screen.webp" alt="Pingu's Quest title screen">
+            <h2>What I can do.</h2>
+            <div>
                 <div>
                     <p>
-                        Penguins are adorable creatures that spend their entire lives doing a whole lot of nothing. Unless, of course, they have a mission. Such is the case with Pingu, a small ostracised penguin who lives in Iceburra, a town in the icy region of Glacierra where
-                        he and his colony have lived peacefully for generations. At least, they did until the surrounding waters became a major migration channel for all sorts of penguin predators, from skuas to leopard seals and orcas.
+                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
                     </p>
                     <p>
-                        During a fishing expedition one day, Pingu came across an ancient book that hints at 10 Stones scattered about Glacierra that were created by the Great Lord Guin himself. Legend has it that these stones possess great power and will grant a single wish
-                        to the one who can find and unite them all. Seeing his chance, Pingu immediately sets off on a quest to find all the Stones of Power so that he can wish for his colony to be saved from a slow death by predation. This isn't as easy
-                        as it sounds however, for the Stones are hidden behind puzzles that have stumped even the great old Featherknights of lore. But Pingu is confident and determined, so it's only a matter of time before the colony knows peace again.
+                        I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
+                    </p>
+                    <p>
+                        I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.
                     </p>
                 </div>
+                <a class="flex btn" href="portfolio.html">Portfolio
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
             </div>
         </section>
-        <!-- Concept Art -->
+        <div class="divider"></div>
+        <!-- I Can Help You -->
         <section>
-            <h3 class="lined">Concept Art</h3>
-            <aside>Click the images to enlarge them!</aside>
-            <div class="tiles">
-                <!-- Menus -->
-                <div class="tile">
-                    <h4 class="tile-title">Menus</h4>
-                    <div class="menus flex"></div>
-                </div>
-                <!-- Places -->
-                <div class="tile">
-                    <h4 class="tile-title">Places</h4>
-                    <div class="places flex"></div>
-                </div>
-                <!-- Puzzles -->
-                <div class="tile">
-                    <h4 class="tile-title">Puzzles</h4>
-                    <div class="puzzles flex"></div>
-                </div>
-                <!-- Characters -->
-                <div class="tile">
-                    <h4 class="tile-title">Characters</h4>
-                    <div class="characters flex"></div>
-                </div>
-                <!-- Stones -->
-                <div class="tile">
-                    <h4 class="tile-title">Stones</h4>
-                    <div class="stones flex"></div>
-                </div>
-                <!-- Items -->
-                <div class="tile">
-                    <h4 class="tile-title">Items</h4>
-                    <div class="items flex"></div>
-                </div>
-            </div>
-        </section>
-        <!-- Comments -->
-        <section>
-            <h3 class="lined">Comments</h3>
-            <p>
-                As you can see, I've put a lot of time and effort into developing the pixellated art style. I obviously drew inspiration from the Pokémon series for quite a few things, such as the isometric perspective, environment style, and UI pop-ups. However, the
-                characters, Stones, items, and environments are all my own, done pixel by pixel in GIMP. Luckily, I found out that I happen to be pretty good at pixel art! I'm extremely proud of the Rose Quartz in particular, so please take a look if
-                you haven't already!
-            </p>
-            <p>
-                I also wrote out the introduction, storyline, and quite a few of the NPC questlines. As a Canadian, it's important to me to have the game in both French and English, so I've translated everything into French as well.
-            </p>
-            <p>
-                The only downside is that between university, work, and an internship, I don't actually have a lot of time to work on this. I don't know how long it'll take me to make this, but it will DEFINITELY happen!
-            </p>
-        </section>
-        <!-- Trailer -->
-        <section>
-            <h3 class="lined">Game Trailer</h3>
+            <h2>I can help you.</h2>
             <div>
-                <video controls>
-                    <source src="docs/pingus-quest-trailer.mp4" type="video/mp4">
-                    <source src="docs/pingus-quest-trailer.ogg" type="video/ogg">
-                    Sorry, but your browser doesn't support the video tag.
-                </video>
+                <div>
+                    <p>
+                        I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
+                    </p>
+                    <p>
+                        I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.
+                    </p>
+                    <p>
+                        If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
+                    </p>
+                </div>
+                <a class="flex btn" href="contact.html">Contact Me
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
             </div>
         </section>
     </main>
@@ -188,7 +142,54 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/pingus-quest.js"></script>
+</body>
+
+</html>
+</div>
+<!-- Items -->
+<div class="tile">
+    <h4 class="tile-title">Items</h4>
+    <div class="items flex"></div>
+</div>
+</div>
+</section>
+<!-- Comments -->
+<section>
+    <h3 class="lined">Comments</h3>
+    <p>
+        As you can see, I've put a lot of time and effort into developing the pixellated art style. I obviously drew inspiration from the Pokémon series for quite a few things, such as the isometric perspective, environment style, and UI pop-ups. However, the
+        characters, Stones, items, and environments are all my own, done pixel by pixel in GIMP. Luckily, I found out that I happen to be pretty good at pixel art! I'm extremely proud of the Rose Quartz in particular, so please take a look if you haven't
+        already!
+    </p>
+    <p>
+        I also wrote out the introduction, storyline, and quite a few of the NPC questlines. As a Canadian, it's important to me to have the game in both French and English, so I've translated everything into French as well.
+    </p>
+    <p>
+        The only downside is that between university, work, and an internship, I don't actually have a lot of time to work on this. I don't know how long it'll take me to make this, but it will DEFINITELY happen!
+    </p>
+</section>
+<!-- Trailer -->
+<section>
+    <h3 class="lined">Game Trailer</h3>
+    <div>
+        <video controls>
+                    <source src="docs/pingus-quest-trailer.mp4" type="video/mp4">
+                    <source src="docs/pingus-quest-trailer.ogg" type="video/ogg">
+                    Sorry, but your browser doesn't support the video tag.
+                </video>
+    </div>
+</section>
+</main>
+<footer>
+    <div class="decoration"></div>
+    <div class="container">
+        <p>Copyright &copy;2021, Laura Ukrainec.
+            <span>All rights reserved.</span>
+        </p>
+    </div>
+</footer>
+<script src="js/main.js"></script>
+<script src="js/pingus-quest.js"></script>
 </body>
 
 </html>
