--- a/artwork.html
+++ b/artwork.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Laura Ukrainec's online portfolio">
     <meta name="author" content="Laura Ukrainec">
-    <title>Laura Ukrainec | Artwork</title>
+    <title>Laura Ukrainec | Home</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
             <!-- Menu -->
             <nav>
                 <ul class="main-menu">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="top-level">
                         <a href="portfolio.html">Portfolio
@@ -57,7 +57,7 @@
                                     <li><a href="flowers-for-freedom.html">Flowers for Freedom</a></li>
                                 </ul>
                             </li>
-                            <li><a class="current" href="artwork.html">Artwork</a></li>
+                            <li><a href="artwork.html">Artwork</a></li>
                             <li><a href="pingus-quest.html">Pingu's Quest</a></li>
                         </ul>
                     </li>
@@ -66,13 +66,72 @@
             </nav>
         </div>
     </header>
-    <main class="artwork container">
-        <h2>Artwork</h2>
-        <p>Click the images to enlarge them!</p>
-        <div class="artwork gallery">
-            <div class="flex images">
+    <main class="home container">
+        <!-- Hello -->
+        <section>
+            <h2>Hello!</h2>
+            <div>
+                <div>
+                    <p>
+                        I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting blueprints.
+                    </p>
+                    <p>
+                        I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.
+                    </p>
+                </div>
+                <a class="flex btn" href="about.html">Learn More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
             </div>
-        </div>
+        </section>
+        <div class="divider"></div>
+        <!-- What I Can Do -->
+        <section>
+            <h2>What I can do.</h2>
+            <div>
+                <div>
+                    <p>
+                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
+                    </p>
+                    <p>
+                        I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
+                    </p>
+                    <p>
+                        I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.
+                    </p>
+                </div>
+                <a class="flex btn" href="portfolio.html">Portfolio
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+        <div class="divider"></div>
+        <!-- I Can Help You -->
+        <section>
+            <h2>I can help you.</h2>
+            <div>
+                <div>
+                    <p>
+                        I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
+                    </p>
+                    <p>
+                        I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.
+                    </p>
+                    <p>
+                        If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
+                    </p>
+                </div>
+                <a class="flex btn" href="contact.html">Contact Me
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="decoration"></div>
@@ -83,7 +142,6 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/gallery.js"></script>
 </body>
 
 </html>
